test-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paks-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paks-app2
  template:
    metadata:
      labels:
        app: paks-app2
    spec:
      containers:
      - name: paks-app2
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paks-app2-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: paks-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paks-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paks-app1
  template:
    metadata:
      labels:
        app: paks-app1
    spec:
      containers:
      - name: paks-app1
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paks-app1-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: paks-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paks-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paks-home
  template:
    metadata:
      labels:
        app: paks-home
    spec:
      containers:
      - name: paks-home
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paks-home-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: paks-home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /app1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: paks-app1-svc
            port:
              number: 80
      - path: /app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: paks-app2-svc
            port:
              number: 80
      - path: /app3(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: paks-app3-svc
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: paks-home-svc
            port:
              number: 80
---
